old-kubernetes-cluster/arr-stack/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr-kube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr-kube
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/bazarr:latest
          name: bazarr
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: bazarr-config-claim
            - mountPath: /movies
              name: movies
            - mountPath: /tv
              name: tv
      restartPolicy: Always
      volumes:
        - name: movies
          flexVolume:
            driver: "fstab/cifs"
            fsType: "cifs"
            secretRef:
              name: "cifs-secret"
            options:
              networkPath: "//192.168.1.11/datapool/media/media/movies"
              mountOptions: "uid=1000,gid=1000"
        - name: tv
          flexVolume:
            driver: "fstab/cifs"
            fsType: "cifs"
            secretRef:
              name: "cifs-secret"
            options:
              networkPath: "//192.168.1.11/datapool/media/media/tv"
              mountOptions: "uid=1000,gid=1000"
        - name: bazarr-config-claim
          persistentVolumeClaim:
            claimName: bazarr-config-claim
