old-kubernetes-cluster/arr-stack/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bazarr.rossreicks.com
    external-dns.alpha.kubernetes.io/target: home.rossreicks.com
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.rossreicks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-kube
                port:
                  number: 80
